[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/BaseUiComponents/BaseLabel/BaseLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/UI/small_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://main_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/BaseUiComponents/MenuButton/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/UI/title_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/Menu/RememberMe.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Menu/LoginForm.gd" type="Script" id=7]
[ext_resource path="res://scenes/BaseUiComponents/BaseLabel/BaseTitle.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/BaseUiComponents/BaseErrorTag/BaseErrorTag.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Network/CustomRequest/HTTPRequest.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/UI/styleboxflat_transparent.tres" type="StyleBox" id=11]
[ext_resource path="res://scenes/Audio/TickButtonSound.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.564706, 0.215686, 0.286275, 0.54902 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="LoginForm" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -704.0
margin_top = -313.5
margin_right = 704.0
margin_bottom = 313.5
custom_constants/separation = 10
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="."]
margin_right = 1408.0
margin_bottom = 145.0
custom_constants/separation = 30
alignment = 1

[node name="Title" parent="Header" instance=ExtResource( 8 )]
margin_right = 848.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.6
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Login"

[node name="BURegister" type="Button" parent="Header"]
margin_left = 878.0
margin_top = 77.0
margin_right = 1408.0
margin_bottom = 145.0
rect_min_size = Vector2( 68, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource( 3 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.960784, 0.976471, 1 )
custom_colors/font_color_pressed = Color( 0.788235, 0.839216, 0.87451, 1 )
enabled_focus_mode = 0
text = "or create an account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TickButtonSound" parent="Header/BURegister" instance=ExtResource( 12 )]

[node name="Error" parent="." instance=ExtResource( 9 )]
visible = false
margin_top = 149.0
margin_bottom = 237.0
custom_styles/normal = SubResource( 1 )

[node name="Body" type="PanelContainer" parent="."]
margin_top = 155.0
margin_right = 1408.0
margin_bottom = 549.0
theme = ExtResource( 3 )

[node name="Margin" type="MarginContainer" parent="Body"]
margin_left = 6.0
margin_top = 6.0
margin_right = 1402.0
margin_bottom = 388.0
rect_min_size = Vector2( 1200, 0 )
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="Parts" type="VBoxContainer" parent="Body/Margin"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1364.0
margin_bottom = 350.0
custom_constants/separation = 15

[node name="Fields" type="HBoxContainer" parent="Body/Margin/Parts"]
margin_right = 1332.0
margin_bottom = 215.0
custom_constants/separation = 30

[node name="Labels" type="VBoxContainer" parent="Body/Margin/Parts/Fields"]
margin_right = 263.0
margin_bottom = 215.0
custom_constants/separation = 30

[node name="Label4" parent="Body/Margin/Parts/Fields/Labels" instance=ExtResource( 1 )]
margin_right = 263.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
color = Color( 0.835294, 0.368627, 0.368627, 1 )

[node name="Label5" parent="Body/Margin/Parts/Fields/Labels" instance=ExtResource( 1 )]
margin_top = 118.0
margin_right = 263.0
margin_bottom = 206.0
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Password"
color = Color( 0.835294, 0.368627, 0.368627, 1 )

[node name="Boxes" type="VBoxContainer" parent="Body/Margin/Parts/Fields"]
margin_left = 293.0
margin_right = 1332.0
margin_bottom = 215.0
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="TBUsername" type="LineEdit" parent="Body/Margin/Parts/Fields/Boxes"]
margin_right = 1039.0
margin_bottom = 100.0
theme = ExtResource( 3 )
max_length = 16
clear_button_enabled = true
caret_blink_speed = 0.1

[node name="TBPassword" type="LineEdit" parent="Body/Margin/Parts/Fields/Boxes"]
margin_top = 115.0
margin_right = 1039.0
margin_bottom = 215.0
theme = ExtResource( 3 )
max_length = 128
secret = true
clear_button_enabled = true

[node name="RememberMe" parent="Body/Margin/Parts" instance=ExtResource( 6 )]
margin_top = 230.0
margin_right = 1332.0
margin_bottom = 318.0

[node name="BUContinue" parent="." instance=ExtResource( 4 )]
margin_top = 559.0
margin_bottom = 655.0
custom_colors/font_color = Color( 0.835294, 0.368627, 0.368627, 1 )
text = "Continue"

[node name="Requests" type="Node" parent="."]

[node name="TokenRequest" parent="Requests" instance=ExtResource( 10 )]
type = "GET"
route = "/api/v1.0/token"
[connection signal="pressed" from="Header/BURegister" to="." method="_on_BURegister_pressed"]
[connection signal="pressed" from="BUContinue" to="." method="_on_BUContinue_pressed"]
[connection signal="request_completed" from="Requests/TokenRequest" to="." method="_on_TokenRequest_request_completed"]
